# Health-chain-stellar

./: ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_IMPLEMENTATION.md  AUTH_DOCS_INDEX.md  AUTH_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  GET_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  README_AUTH.md  SECURITY.md  SECURITY_POLICY.md  SMOKE_TESTS.md  VERIFICATION_CHECKLIST.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: contract-tests.yml  dependency-audit.yml  smoke-tests.yml
.kiro/specs/audit-timeline/: design.md  requirements.md  tasks.md
backend/: .env.example  .gitignore  BACKEND_AUTH_GUIDE.md  CONTRACT_TESTING.md  CONTRACT_TESTING_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/scripts/: check-i18n.ts
backend/src/: app.controller.ts  app.module.ts  main.ts  test-duplicate-import.ts
backend/src/__contracts__/: auth.contract.spec.ts  dispatch-riders.contract.spec.ts  (+2 more)
backend/test/: app.e2e-spec.ts
contracts/src/: constants.rs  lib.rs  payments.rs  test_payments.rs  test_storage_layout.rs
frontend/health-chain/: QUICK_REFERENCE.md  SETUP_AUTH.md  eslint.config.mjs  install-auth.sh  middleware.ts  package-lock.json  package.json  vitest.setup.ts
lifebank-soroban/: ERRORS.md
lifebank-soroban/contracts/coordinator/: Cargo.toml
lifebank-soroban/contracts/coordinator/src/: error.rs  lib.rs  test.rs  types.rs
scripts/: smoke-test.sh
(+370 files in other folders)
