[package]
name = "coordinator-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
request-contract  = { path = "../requests" }
inventory-contract = { path = "../inventory" }
payment-contract  = { path = "../payments" }
delivery-contract = { path = "../delivery" }
